# docker-demonstration

./: docker-compose.yml
.github/workflows/: deploy.yaml
be/: Cargo.toml  Dockerfile  Rocket.toml  index.html
be/src/: main.rs
fe/: Dockerfile  bun.lockb  package.json  vite.config.ts
fe/src/: App.tsx
fe/src/models/: Detection.ts
fe/src/services/: detect.ts
fe/src/utils/: promise.ts  result.ts
